# rpgame

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rpgame/: entities.py  game.py  room.py  text_ui.py  utils.py
tests/rpgame/: conftest.py  test_acceptance.py  test_collisions.py  test_player.py  test_room.py  test_text_ui.py  test_utils.py  test_wall.py
tests/rpgame/test_text_ui/: test_from_map.py  test_render.py
