[tool.poetry]
name = "rpgame"
version = "0.1.0"
description = ""
authors = ["Jiří Filip <j.f.ilip@seznam.cz>"]
packages = [
    { include="rpgame", from="src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.15.2"
jupyterlab = "^4.0.6"
pytest = "^7.4.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
atomic = true
line_length = 120
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
balanced_wrapping = true
include_trailing_comma = true
multi_line_output = 3
known_third_party = [
    "pytest",
]
